[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-chatbot-sample"
version = "0.1.0"
description = "A sample project demonstrating how to create an intelligent chatbot using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["langchain", "langgraph", "chatbot", "ai", "nlp"]
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/squirrelogics/langchain-chatbot-sample"
Repository = "https://github.com/squirrelogics/langchain-chatbot-sample.git"
"Bug Tracker" = "https://github.com/squirrelogics/langchain-chatbot-sample/issues"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=chatbot"
testpaths = ["tests"]

[tool.coverage.run]
source = ["chatbot"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
