[tool.poetry]
name = "langchain-chatbot-sample"
version = "0.1.0"
description = "A sample project demonstrating how to create an intelligent chatbot using LangChain and LangGraph"
authors = ["Scott <scott@squirrel.software>"]
readme = "README.md"
packages = [{ include = "chatbot" }]
license = "MIT"
repository = "https://github.com/squirrelogic/langchain-chatbot-sample"
keywords = ["langchain", "langgraph", "chatbot", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "^0.3.17"
langgraph = "^0.2.69"
pydantic = "^2.6.4"
PyYAML = "^6.0.1"
python-dotenv = "^1.0.1"
openai = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
black = "^24.3.0"
mypy = "^1.9.0"
ruff = "^0.3.3"
types-PyYAML = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=chatbot"
testpaths = ["tests"]

[tool.coverage.run]
source = ["chatbot"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
